--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,11 @@
     box-sizing: border-box;
 }
 
+a,button,input,select,textarea {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+}
+
 html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -145,6 +150,7 @@ header.page-header {
     transition: border-radius .2s cubic-bezier(0.215, 0.61, 0.355, 1);
     overflow: hidden;
     transition: color .2s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: background-color .2s cubic-bezier(0.215, 0.61, 0.355, 1);
     transform: translate3d(0, 0, 0);
     width: 100%;
     height: 100%;
@@ -208,6 +214,13 @@ header.page-header {
     --hover-bg: #000;
     --hover-txt: #fff;
     --hover-txt-color: #fff;
+}
+.btn[disabled] {
+    --txt-color: var(--hover-txt-color)!important;
+    --hover-bg: #222;
+}
+.btn[disabled]::before {   
+    transform: translate3d(0, 0, 0);
 }
 
 footer {
