--- a/src/components/Alert.module.scss
+++ b/src/components/Alert.module.scss
@@ -1,11 +1,12 @@
 .alert {
     position: fixed;
-    top: calc(var(--nav-height) + 2rem);
+    top: calc(var(--nav-height));
     left: 50%;
     top: 0;
     transition: none;
     min-width: 300px;
     max-width: calc(100% - 3.2rem);
+    z-index: 99999;
  
     display: flex;
     align-items: flex-start;
