--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -1,25 +1,24 @@
-
 @font-face {
     font-family: Kathycox;
     src: url(../fonts/KathyCox.ttf);
 }
+
 @font-face {
     font-family: Neuemetana;
-    src :url(../fonts/NeueMetana-Regular.otf)
+    src: url(../fonts/NeueMetana-Regular.otf)
 }
 
-.FormComponent
-{
+.FormComponent {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 30px;
-    gap:40px;
+    gap: 40px;
 }
 
-.formHeading
-{   font-family: "Antonio", sans-serif;
+.formHeading {
+    font-family: "Antonio", sans-serif;
     font-size: 20px;
     text-align: center;
     padding-top: 40px;
@@ -28,25 +27,23 @@
 
 
 @media screen and (max-width:670px) {
-  .formHeading{
-    padding-top:50px;
-  }
+    .formHeading {
+        padding-top: 50px;
+    }
 }
 
-.sectionHeading
-{
-  font-family: Kathycox ,sans-serif;
+.sectionHeading {
+    font-family: Kathycox, sans-serif;
 
-  font-size: 16px;
+    font-size: 16px;
 }
 
-.formColumn 
-{
+.formColumn {
     max-width: 462px;
-    width: 100%; 
+    width: 100%;
 }
-.halfInput 
-{
+
+.halfInput {
     display: block;
     width: 100%;
     height: 27px;
@@ -60,11 +57,10 @@
     cursor: pointer;
 }
 
-.FullInput 
-{
+.FullInput {
     height: 27px;
     width: 100%;
-    min-width:450px;
+    min-width: 450px;
     margin-bottom: 0;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -73,29 +69,29 @@
     color: #2b2b2b;
     cursor: pointer;
 }
-.FormLabel, input ,option 
-{
-    font-family: Neuemetana,sans-serif;   
-    font-size: 10px; 
+
+.FormLabel,
+input,
+option {
+    font-family: Neuemetana, sans-serif;
+    font-size: 10px;
 }
 
-.DoubleInputBox
-{
+.DoubleInputBox {
     display: flex;
     flex-direction: row;
-    gap:30px;
+    gap: 30px;
 
-    > div {
-      flex-grow: 1;
+    >div {
+        flex-grow: 1;
     }
 }
 
-@media  screen and (max-width:550px) {
-  .DoubleInputBox
-  {
-    flex-direction: column;
-    gap: 0;
-  }
+@media screen and (max-width:550px) {
+    .DoubleInputBox {
+        flex-direction: column;
+        gap: 0;
+    }
 }
 
 .option-group {
@@ -108,18 +104,18 @@
     font-size: 4rem;
     margin: 0.2em auto;
     transform: translateZ(0);
-  }
-  
-  .option-container {
-    display: flex; 
+}
+
+.option-container {
+    display: flex;
     justify-content: center;
     align-items: stretch;
     width: 120%;
     height: 100%;
     margin: 0 -10%;
-  }
-  
-  .option {
+}
+
+.option {
     overflow: hidden;
     flex: 1;
     display: block;
@@ -129,25 +125,32 @@
     position: relative;
     margin: 0em;
     margin-right: 0.2em;
-    &:last-child { margin-right: 0; }
-    
+
+    &:last-child {
+        margin-right: 0;
+    }
+
     border-radius: 0.25em;
-    
+
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
     flex-direction: column;
-    
+
     cursor: pointer;
-    
+
     opacity: 0.5;
-    transition-duration: 0.8s, 0.6s;
-    transition-property: transform, opacity;
-    transition-timing-function: cubic-bezier(.98,0,.22,.98), linear;
-    will-change: transform, opacity;
-  }
-  
-  .option__indicator {
+    transition-duration: 0.8s,
+    0.6s;
+    transition-property: transform,
+    opacity;
+    transition-timing-function: cubic-bezier(.98, 0, .22, .98),
+    linear;
+    will-change: transform,
+    opacity;
+}
+
+.option__indicator {
     display: block;
     transform-origin: left bottom;
     transition: inherit;
@@ -156,36 +159,36 @@
     top: 0.2em;
     right: 0.3em;
     left: 0.5em;
-    
+
     &:before,
     &:after {
-      content: '';
-      display: block;
-      border: solid 2px #eba510;
-      border-radius: 50%;
-      width: 0.2em;
-      height: 0.2em;
-      position: absolute;
-      top: 0;
-      right: 0;
+        content: '';
+        display: block;
+        border: solid 2px #eba510;
+        border-radius: 50%;
+        width: 0.2em;
+        height: 0.2em;
+        position: absolute;
+        top: 0;
+        right: 0;
     }
-    
+
     &:after {
-      background: #ec2727;
-      transform: scale(0);
-      transition: inherit;
-      will-change: transform;
+        background: #ec2727;
+        transform: scale(0);
+        transition: inherit;
+        will-change: transform;
     }
-  }
-  
-  .option-input {
+}
+
+.option-input {
     position: absolute;
     top: 0;
     z-index: -1;
     visibility: hidden;
-  }
-  
-  .option__label {
+}
+
+.option__label {
     font-family: "Antonio", sans-serif;
     display: block;
     width: 100%;
@@ -196,54 +199,80 @@
     transform: translateX(20%) scale(0.7);
     transition: inherit;
     will-change: transform;
-  
-    sub { 
-      margin-left: 0.25em;
-      font-family: Neuemetana,sans-serif;
-      font-size: 0.4em;
-      display: inline-block; 
-      vertical-align: 0.5em;
+
+    sub {
+        margin-left: 0.25em;
+        font-family: Neuemetana, sans-serif;
+        font-size: 0.4em;
+        display: inline-block;
+        vertical-align: 0.5em;
     }
-    
+
     &:after {
-      content: '';
-      display: block;
-      border: solid 2px #ec2727;
-      width: 100%;
-      transform-origin: 0 0;
-      transform: scaleX(0.2);
-      transition: inherit;
-      will-change: transform;
+        content: '';
+        display: block;
+        border: solid 2px #ec2727;
+        width: 100%;
+        transform-origin: 0 0;
+        transform: scaleX(0.2);
+        transition: inherit;
+        will-change: transform;
     }
-  }
-  
-  .option:last-child {
-    .option__label { transform: translateX(0%) scale(0.7); }
-    .option__indicator { transform: translateX(-20%); }
-  }
-  
-  .option-input:checked ~ .option {
+}
+
+.option:last-child {
+    .option__label {
+        transform: translateX(0%) scale(0.7);
+    }
+
+    .option__indicator {
+        transform: translateX(-20%);
+    }
+}
+
+.option-input:checked~.option {
     transform: translateX(-20%) translateX(0.2em);
-    .option__indicator { transform: translateX(0%); }
-    .option__label { transform: translateX(40%) scale(0.7); }
-  }
-  
-  .option-input:first-child:checked ~ .option {
+
+    .option__indicator {
+        transform: translateX(0%);
+    }
+
+    .option__label {
+        transform: translateX(40%) scale(0.7);
+    }
+}
+
+.option-input:first-child:checked~.option {
     transform: translateX(20%) translateX(-0.2em);
-    .option__indicator { transform: translateX(-40%); }
-    .option__label { transform: translateX(0%) scale(0.7); }
-  }
-  
-  .option-input:nth-child(1):checked ~ .option:nth-of-type(1),
-  .option-input:nth-child(2):checked ~ .option:nth-of-type(2) {
+
+    .option__indicator {
+        transform: translateX(-40%);
+    }
+
+    .option__label {
+        transform: translateX(0%) scale(0.7);
+    }
+}
+
+.option-input:nth-child(1):checked~.option:nth-of-type(1),
+.option-input:nth-child(2):checked~.option:nth-of-type(2) {
     opacity: 1;
-    .option__indicator { transform: translateX(0); &::after { transform: scale(1); } }
+
+    .option__indicator {
+        transform: translateX(0);
+
+        &::after {
+            transform: scale(1);
+        }
+    }
+
     .option__label,
-    .option__label::after { transform: scale(1); }
-  }
-  
-  .submitButton
-  {
+    .option__label::after {
+        transform: scale(1);
+    }
+}
+
+.submitButton {
     position: relative;
     padding: 4px;
     width: 100px;
@@ -262,8 +291,9 @@
     z-index: 2;
     padding: 0.625rem;
     border-radius: 0.5rem;
-  }
-  .submitButton::before {
+}
+
+.submitButton::before {
     content: '';
     background-color: #ff414b;
     position: absolute;
@@ -274,31 +304,31 @@
     transform: translate3d(0, 101%, 0);
     transition: transform 0.2s;
     z-index: -1;
-  }
-  .submitButton:hover::before {
-    transform: translate3d((0, 0, 0));
-  }
+}
 
-  .signInBtn
-  { display: flex;
+.submitButton:hover::before {
+    transform: translate3d((0, 0, 0));
+}
+
+.signInBtn {
+    display: flex;
     align-items: center;
     padding: 5px;
-    border:1px solid gray;
+    border: 1px solid gray;
     background: #FFFF;
     border-radius: 8px;
-  }
+}
 
-  #output {
+#output {
     padding: 20px;
     background: #dadada;
-  }
- 
-  select
-  {
-    font-family: Neuemetana,sans-serif ;
-  }
+}
 
-  .login-msg {
+select {
+    font-family: Neuemetana, sans-serif;
+}
+
+.login-msg {
     display: flex;
     align-items: center;
     padding: 0.8rem 1rem;
@@ -321,12 +351,12 @@
     }
 }
 
-  .login-msg.success {
-      color: #2e7d32;
-      background-color: rgb(237, 247, 237);
-  }
+.login-msg.success {
+    color: #2e7d32;
+    background-color: rgb(237, 247, 237);
+}
 
-  .login-msg.error {
-      color: #d32f2f;
-      background-color: rgb(253, 237, 237);
-  }
+.login-msg.error {
+    color: #d32f2f;
+    background-color: rgb(253, 237, 237);
+}
