added qr code scanner styling update the icons for log out,update,register add mobile navigation style

--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: Kathycox;
-    src: url(../fonts/KathyCox.ttf);
-}
+ 
 .icon {
     display: flex;
     color: inherit;
@@ -19,7 +16,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 45px;
-    font-family: Kathycox;
+    font-family: 'Antonio', sans-serif;
     align-items: flex-start;
     justify-content: space-around;
 }
@@ -43,3 +40,15 @@
     color:#9b9ea0;
     font-size: 0.6rem;
 }
+.btnComponent
+{
+    height: 100%;
+    width:170px;
+    font-size: small;
+}
+.logOutBtn 
+{   
+    margin:auto;
+    width:300px;
+}
+ 
