--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -1,3 +1,215 @@
 .profile {
+    .header {
+        height: 75vh;
+
+        .header-btn-wrapper {
+            width: 100%;
+            height: 6rem;
+            margin: 0;
+            flex-shrink: 0;
     
+        }
+        
+        .subtitle-btn-wrapper {
+            height: 5rem;
+            margin-top: 1rem;
+        }
+        @media screen and (min-width: 800px) {
+            height: 60vh;
+            .header-btn-wrapper {
+                width: calc((100vw - 9.375rem) * 3/14 + 1.875rem);
+                position: absolute;
+                bottom: 2.2rem;
+                right: 1.2rem;
+            }
+        }
+    }
+
+    main {
+        .profile-section {
+            .heading {
+                font-family: 'Antonio', sans-serif;
+                font-size: 3.2rem;
+                font-weight: 300;
+                margin: 4rem 0 2rem;
+            }
+
+            .confirmation {
+                display: flex;
+                flex-direction: column;
+                align-items: stretch;
+                gap: 0.8rem;
+                
+                .event-card {
+                    width: 100%;
+                }
+
+                @media screen and (min-width: 999px) {
+                    flex-direction: row;
+                    gap: 1rem;
+                    align-items: flex-end;
+                }
+            }
+
+
+            h3 {
+                font-size: 2rem;
+                margin: 2rem 0 1rem;
+            }
+            
+            ul.registration-details {
+                max-width: 25rem;
+                list-style-type: none;
+                font-size: 1.25rem;
+                margin: 2rem 0;
+
+                li {
+                    display: flex;
+                    width: 100%;
+                    margin-bottom: 0.3rem;
+
+                    .title {
+                        font-weight: 600;
+                        max-width: 8rem;
+                        flex-grow: 1;
+                        margin-right: 0.4rem;
+                    }
+
+                    .id {
+                        font-size: 1rem;
+                        margin-bottom: 0.5rem;
+                    }
+                }
+            }
+
+            .qr {
+                svg {
+                    mix-blend-mode: multiply;
+                }
+            }
+            .ftr {
+                margin: 0.8rem 0;
+                font-size: 0.8rem;
+                p {
+                    text-align: center;
+                }
+            }
+
+            .register-btn-wrapper {
+                height: 10rem;
+                width: 16rem;
+                padding: 2rem 0;
+            }
+
+            .btns-wrapper {
+                display: flex;
+                flex-direction: row;
+                padding: 2rem 0;
+                gap: 1rem;
+                width: 40rem;
+                max-width: 100%;
+
+                .btn-wrapper {
+                    width: 100%;
+                    height: 6rem;
+                }
+
+                @media screen and (max-width: 699px) {
+                    flex-direction: column;
+                }
+            }
+        }
+    }
+}
+
+
+
+.event-card {
+    position: relative;
+    border-top-right-radius: 3rem;
+    overflow: hidden;
+    height: 18rem;
+    width: 18rem;
+    max-width: 25rem;
+
+    >figure {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        >img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    >figure::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(31, 31, 31, 0) 0%, rgba(31, 31, 31, 0.6) 100%);
+        z-index: 20;
+        transition: opacity .3s cubic-bezier(0.215, 0.61, 0.355, 1);
+        opacity: 1;
+    }
+
+    >figure:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(255, 147, 173, 0) 0%, rgba(255, 147, 173, 0.6) 100%);
+        z-index: 21;
+        transition: opacity .3s cubic-bezier(0.215, 0.61, 0.355, 1);
+        opacity: 0;
+    }
+
+
+    >main {
+        position: absolute;
+        bottom: 0;
+        padding: 1.25rem .9375rem;
+        z-index: 22;
+        color: white;
+        font-family: "Roboto", sans-serif;
+
+        .title {
+            font-size: 2.2rem;
+            font-weight: 450;
+            letter-spacing: -0.08rem;
+        }
+    }
+}
+
+.event-card:hover {
+    >figure::after {
+        opacity: 1;
+    }
+}
+
+@media print {
+    :not(.confirmation + *) {
+        display: none;
+    }
+    .confirmation {
+        display: block;
+
+        * {
+            display: block;
+        }
+    }
 }
