Add register button to Home page
add profile images
update events data to an object for fast access
add hover effect to events list item

--- a/src/components/Carousel.module.scss
+++ b/src/components/Carousel.module.scss
@@ -79,12 +79,15 @@
                         display: flex;
                         flex-direction: row;
 
-                        .role {
+                        .role, .sep {
                             display: inline-block;
                             margin-right: .625rem;
                             font-size: .75rem;
                             font-weight: 700;
                             line-height: 1;
+                        }
+                        .sep::after {
+                            content: "/";
                         }
                     }
                 }
