--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -162,8 +162,18 @@
                         color: var(--primary);
                     }
                 }
-                .event-li-inner:hover {
-                    cursor: pointer;
+                .event-li-inner::before {
+                    content: "";
+                    position: absolute;
+                    bottom: 0;
+                    background-color: #bcbcbc1f;
+                    width: 100%;
+                    height: 0;
+                    transition: 0.3s cubic-bezier(.86,0,.07,.995);
+                    pointer-events: none;
+                }
+                .event-li-inner:hover::before {
+                    height: 100%;
                 }
             }
 
