--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -50,10 +50,18 @@
 
 // ----- First section
 .intro-section {
-    width: fit-content;
-    max-width: 100%;
-    margin: auto;
-    padding-bottom: 2rem;
+    width: 100%;
+    padding-bottom: 5rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    position: relative;
+    overflow: hidden;
+    min-height: 100vh;
+
+    @media screen and (max-width: 700px) {
+        padding-left: 0.8rem;
+        padding-right: 0.8rem;        
+    }
 
     padding-top: calc(var(--nav-height) + 3rem);
     --heading-font-size: 18vw;
@@ -68,6 +76,9 @@
 
     .introContent {
         margin-bottom: 4rem;
+        width: fit-content;
+        margin: auto;
+        padding: 0;
     }
 
     .subtitle {
@@ -80,12 +91,84 @@
         left: calc((1.14 * var(--heading-font-size)) - 150px);
     }
 
+    .header-btn-wrapper {
+        height: calc(0.8 * var(--heading-font-size));
+        width: calc(1.15 * var(--heading-font-size));
+        position: absolute;
+        right: 0;
+        bottom: calc(0.9 * var(--heading-font-size))
+    }
+
+    .intro-bg {
+        user-select: none;
+        pointer-events: none;
+        overflow-y: visible;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: calc(1.4 * var(--heading-font-size));
+        white-space: nowrap;
+        font-family: 'Antonio', sans-serif;
+        letter-spacing: -0.18ch;
+        text-transform: uppercase;
+        .rail {
+            position: absolute;
+            height: calc(1.4 * var(--heading-font-size));
+            line-height: 0.8;
+        }
+        .rail:nth-child(1) {
+            color: #dadada;
+            top: -2rem;
+            animation: 140s infinite marquee;
+        }
+        .rail:nth-child(2) {
+            color: #eaeaea;
+            top: 25%;
+            animation: 120s infinite marquee;    
+        }
+        .rail:nth-child(3) {
+            color: #efefef;
+            top: 50%;
+            animation: 100s infinite marquee;
+        }
+
+        @keyframes marquee {
+            from { transform: translateX(0); }
+            to { transform: translateX(-50%); }
+        }
+
+    }
+
+    @media screen and (min-width: 999px) {
+        .subtitle {
+            font-size: 1.4rem;
+            width: 500px;
+            left: calc((1.14 * var(--heading-font-size)) - 250px);
+        }
+    }
+
+    @media screen and (min-width: 800px) {
+        .subtitle {
+            font-size: 1.2rem;
+            width: 400px;
+            left: calc((1.14 * var(--heading-font-size)) - 200px);
+        }
+    }
+
     @media screen and (max-width: 700px) {
         .subtitle {
             position: static;
             margin: 4.5rem auto;
             width: 75%;
             font-size: 1rem;
+        }
+
+        .header-btn-wrapper {
+            top: calc(0.09 * var(--heading-font-size));
+            left: calc(2.45 * var(--heading-font-size));
+            bottom: unset;
         }
     }
 }
@@ -136,7 +219,7 @@
 
         .btn-wrapper {
             height: 18vw;
-            min-height: 18.75rem;
+            min-height: 16rem;
         }
 
         @media screen and (max-width: 999px) {
@@ -285,9 +368,11 @@
             @media screen and (max-width: 1900px) {
                 font-size: 3rem;
             }
+
             @media screen and (max-width: 1600px) {
                 font-size: 2.5rem;
             }
+
             @media screen and (max-width: 1366px) {
                 font-size: 2.25rem;
             }
