--- a/src/components/HighlightCard.module.scss
+++ b/src/components/HighlightCard.module.scss
@@ -65,13 +65,18 @@
             font-size: 2.2rem;
             font-weight: 500;
             letter-spacing: -0.08rem;
-            padding-bottom: 4rem;
-            position: absolute;
-            bottom: 0;
+            margin-bottom: 0.8rem;
         }
 
         .cardSubtitle {
-            font-size: 0.75rem;
+            display: flex;
+            flex-direction: row;
+            font-size: 0.9rem;
+            font-weight: 500;
+
+            .desc {
+                flex-grow: 1;
+            }
         }
     }
 
@@ -79,12 +84,14 @@
         height: 18.75rem;
 
         >main {
+            padding: .625rem;
+
             .cardTitle {
                 font-size: 20px;
             }
 
             .cardSubtitle {
-                font-size: 0.75rem;
+                font-size: 0.6rem;
             }
         }
     }
