--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -67,6 +67,7 @@
 
                 option {
                     font: inherit;
+                    line-height: 1.5;
                 }
 
                 textarea {
@@ -108,6 +109,22 @@
                             margin-left: 0.5rem;
                         }
                     }
+                }
+            }
+
+            .form-link {
+                margin: 0 0 1.6rem;
+
+                .form-btn {
+                    .btn-text {
+                        font-size: 1rem;
+                    }
+
+                    svg {
+                        width: 1rem;
+                        height: 1rem;
+                    }
+
                 }
             }
 
