--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,10 +1,15 @@
 
+:root
+{
+    --text-FooterColor:rgb(51, 49, 49);
+}
 footer {
-    background-color: rgb(39, 39, 39);
-    color: #FFFF;
-    padding: 30px;
+    background-color:#CBCACA;
+    color: --text-FooterColor;
     height: 100%;
-
+    padding:15px;
+    font-family: "Antonio", sans-serif;
+    letter-spacing: -0.15ch;
     .link {
         color: white;
     }
@@ -14,9 +19,12 @@ footer {
     }
 }
 
-.footerContent {
-    display: flex;
-    justify-content: space-around;
+.growIcon { 
+    transition: all .2s ease-in-out; 
+    }
+    
+    .growIcon:hover { 
+    transform: scale(1.2); 
 }
 
 .footerItems {
@@ -26,17 +34,40 @@ footer {
     flex-wrap: wrap;
     align-items: center;
     font-size: 1rem;
-    justify-content: space-between;
-    gap: 30px;
+    justify-content: space-around;
 
+    .thanks 
+    {
+        font-size: 45px;
+        text-transform: uppercase;
+        text-align: center;
+    }
+}
+
+
+.footerItems 
+{  
+    p {
+        font-size:30px;
+        padding-bottom: 20px;
+        text-transform: capitalize;
+    }
 }
 
 .LogoContainer {
     >img {
-        width: 400px;
+        width: 340px;
         filter: invert(100%);
         max-width: 100%;
     }
+    .title 
+    {
+        font-size: 34px;
+        margin-top: -50px;
+        text-align: center;
+    }
+
+
 }
 
 .Registerbtn {
@@ -53,12 +84,39 @@ footer {
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
+    .footerContent 
+    {   display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        .QuotesContainer
+        {   width:300px;
+            white-space:wrap;
+            .quotes
+            {
+                font-size: 30px;
+            }
+        }
+        .sponsors
+        {
+            width: 250px;
+        }
+    }
+    
+
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:630px) {
     .footerContent {
+        justify-content: center;
         flex-direction: column;
+        gap:10px
+    }
+    .footerItems{
+        justify-content: center;
+        flex-direction: column;
+        gap:10px;
     }
 }
 
@@ -69,13 +127,20 @@ footer {
 
     .handle-wrapper {
         margin-right: 2rem;
+        border: 1px solid black;
+        padding:20px;
+        border-radius: 50%;
         
         .handle {
             display: block;
             position: relative;
-            width: 1rem;
-            height: 1rem;
+            width: 1.5rem;
+            height: 1.5rem;
             
+            a{
+                border-radius: 50%;
+                border: 1px solid --text-FooterColor;
+            }
             > svg {
                 position: absolute;
                 top: 50%;
@@ -83,8 +148,9 @@ footer {
                 transform: translate(-50%, -50%);
                 width: 80%;
                 height: 80%;
-                fill: var(--white1);
+                fill: var(--text-FooterColor);
             }
+            
         }
         
     }
@@ -92,7 +158,7 @@ footer {
 
 
 .copyright {
-    color: #ddd;
+    color:rgb(51, 49, 49);
     font-size: 0.95rem;
     text-align: center;
 }
