--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,15 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    background: var(--white1);
+    height: 6px;
+    width: 6px;
+}
+::-webkit-scrollbar-thumb {
+    background: #c97a90;
+}
+
 a,button,input,select,textarea {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-touch-callout: none;
