--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -1,7 +1,7 @@
 .form-page {
     .form-box {
         .login-form {
-            padding: 2.5rem 0 4rem;
+            padding: 2.5rem 0;
             max-width: 1000px;
 
             .form-fields {
