--- a/src/components/HighlightCard.module.scss
+++ b/src/components/HighlightCard.module.scss
@@ -49,6 +49,7 @@
         z-index: 21;
         transition: opacity .3s cubic-bezier(0.215, 0.61, 0.355, 1);
         opacity: 0;
+        pointer-events: none;
     }
 
 
@@ -78,6 +79,16 @@
                 flex-grow: 1;
             }
         }
+    }
+
+    .link {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 0;
+        z-index: 30;
     }
 
     @media screen and (max-width: 700px) {
