--- a/src/styles/Events.module.scss
+++ b/src/styles/Events.module.scss
@@ -147,6 +147,9 @@
                     font-size: 1.3125rem;
                     font-weight: 700;
                     line-height: 1.04;
+                    .time {
+                        transition: 0.3s cubic-bezier(.86, 0, .07, .995);
+                    }
 
                     .title {
                         order: 2;
@@ -184,13 +187,18 @@
                     content: "";
                     position: absolute;
                     bottom: 0;
-                    background-color: #bcbcbc1f;
+                    background-color: #cccbcb1f;
                     width: 100%;
                     height: 0;
                     transition: 0.3s cubic-bezier(.86, 0, .07, .995);
                     pointer-events: none;
                 }
 
+                .event-li-inner:hover {
+                    .time {
+                        color: #222;
+                    }
+                }
                 .event-li-inner:hover::before {
                     height: 100%;
                 }
